vcard-personal-portfolio/assets/images/Cybersecuirty/SA-Vulnerability-Report (1)
Golismero - Does a fingerprint on the Domain.
------------------------

  File "/usr/bin/golismero", line 66
    print "[!] You must use Python version 2.7"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?


Nmap - Fast Scan [Only Few Port Checks]
------------------------

Starting Nmap 7.94SVN ( https://nmap.org ) at 2025-01-05 01:05 EST
Nmap scan report for starbucks.nl (104.18.40.133)
Host is up (0.0085s latency).
Other addresses for starbucks.nl (not scanned): 172.64.147.123 2606:4700:4400::6812:2885 2606:4700:4400::ac40:937b
Not shown: 97 filtered tcp ports (no-response)
Some closed ports may be reported as filtered due to --defeat-rst-ratelimit
PORT     STATE SERVICE
80/tcp   open  http
443/tcp  open  https
8080/tcp open  http-proxy

Nmap done: 1 IP address (1 host up) scanned in 3.58 seconds


WhatWeb - Checks for X-XSS Protection Header
------------------------

[1m[34mhttp://starbucks.nl[0m [301 Moved Permanently] [1mCountry[0m[[0m[22mRESERVED[0m][[1m[31mZZ[0m], [1mHTTPServer[0m[[1m[36mcloudflare[0m], [1mIP[0m[[0m[22m172.64.147.123[0m], [1mRedirectLocation[0m[[0m[22mhttps://www.starbucks.nl/[0m], [1mTitle[0m[[1m[33m301 Moved Permanently[0m], [1mUncommonHeaders[0m[[0m[22mcf-ray[0m]
[1m[34mhttps://www.starbucks.nl/[0m [200 OK] [1mCountry[0m[[0m[22mUNITED STATES[0m][[1m[31mUS[0m], [1mFrame[0m, [1mHTML5[0m, [1mHTTPServer[0m[[1m[36mcloudflare[0m], [1mIP[0m[[0m[22m104.18.40.133[0m], [1mScript[0m, [1mStrict-Transport-Security[0m[[0m[22mmax-age=31536000; includeSubDomains; preload[0m], [1mTitle[0m[[1m[33mHomepage | Starbucks[0m], [1mUncommonHeaders[0m[[0m[22mcf-ray,cf-cache-status,link,content-security-policy,x-content-type-options,x-permitted-cross-domain-policies[0m]


Nikto - Checks the Domain Headers.
------------------------

- Nikto v2.5.0
---------------------------------------------------------------------------
+ Multiple IPs found: 104.18.40.133, 172.64.147.123, 2606:4700:4400::6812:2885, 2606:4700:4400::ac40:937b
+ Target IP:          104.18.40.133
+ Target Hostname:    starbucks.nl
+ Target Port:        80
+ Start Time:         2025-01-05 01:07:36 (GMT-5)
---------------------------------------------------------------------------
+ Server: cloudflare
+ /: The anti-clickjacking X-Frame-Options header is not present. See: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Frame-Options
+ /: The X-Content-Type-Options header is not set. This could allow the user agent to render the content of the site in a different fashion to the MIME type. See: https://www.netsparker.com/web-vulnerability-scanner/vulnerabilities/missing-content-type-header/
+ Root page / redirects to: https://www.starbucks.nl/
+ 266 requests: 0 error(s) and 2 item(s) reported on remote host
+ End Time:           2025-01-05 01:07:43 (GMT-5) (7 seconds)
---------------------------------------------------------------------------
+ 1 host(s) tested


Nmap - Checks for Remote Desktop Service over UDP
------------------------

Starting Nmap 7.94SVN ( https://nmap.org ) at 2025-01-05 09:02 EST
Nmap scan report for starbucks.nl (104.18.40.133)
Host is up.
Other addresses for starbucks.nl (not scanned): 172.64.147.123 2606:4700:4400::ac40:937b 2606:4700:4400::6812:2885

PORT     STATE         SERVICE
3389/udp open|filtered ms-wbt-server

Nmap done: 1 IP address (1 host up) scanned in 2.33 seconds


